# reaper-cli

./: .gitignore  AGENTS.md  FEATURE_GAPS.md  NOTICE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: LICENSE.dschuler36-reaper-mcp-server
scripts/: setup_reaper_connection.py
src/reaper_mcp/: __init__.py  __main__.py  cli.py  config.py  connection.py  inreaper.py  server.py
src/reaper_mcp/offline_support/: __init__.py  audio_analyzer.py  dataclasses.py  fx_finder.py  rpp_finder.py  rpp_parser.py  utils.py
src/reaper_mcp/tools/: __init__.py  analysis.py  audio.py  envelopes.py  fx.py  fx_chain_templates.py  items.py  lanes.py  markers.py  master.py  midi_events.py  midi_notes.py  offline.py  project.py  project_templates.py  razor_edits.py  reapack.py  render.py  render_presets.py  restart.py  scripting.py  sends.py  snapshot.py  system.py  takes.py  templates.py  tempo_map.py  themes.py  track_groups.py  tracks.py
src/reaper_mcp/utils/: fx_params.py  items.py  positions.py  render.py  track_props.py
tests/: test_audio_analyzer.py  test_cli_helpers.py  test_fx_finder.py  test_positions.py  test_pure_helpers.py  test_restart.py  test_rpp_parser.py  test_scripting.py  test_smoke.py
tests/fixtures/: sample.RPP
typings/reapy/: __init__.pyi
typings/reapy/reascript_api/: __init__.pyi
