[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reaper-mcp-unified"
version = "0.1.0"
description = "Unified REAPER MCP server — merges dschuler36, bonfire-audio, and wegitor projects into one"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Combined upstream — see NOTICE.md" },
]
keywords = ["mcp", "reaper", "daw", "audio", "music", "midi", "mastering", "mixing", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0",
    "python-reapy>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
    "pyloudnorm>=0.1.1",
    "librosa>=0.10.0",
    "platformdirs>=3.0.0",
    "typer>=0.9.0",
]

[project.urls]
"Upstream — dschuler36"     = "https://github.com/dschuler36/reaper-mcp-server"
"Upstream — bonfire-audio"  = "https://github.com/bonfire-audio/reaper-mcp"
"Upstream — wegitor"        = "https://github.com/wegitor/reaper-reapy-mcp"

[project.scripts]
reaper-mcp = "reaper_mcp.__main__:main"
reaper-cli = "reaper_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reaper_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:reapy.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — formatter handles it
]

[tool.ruff.lint.per-file-ignores]
# cli.py builds Typer annotations programmatically; Optional[...] is used as a
# runtime value, not a type hint — `str | None` would change object identity.
"src/reaper_mcp/cli.py" = ["UP007", "UP045"]
# test_cli_helpers.py asserts on those same constructed annotations.
"tests/test_cli_helpers.py" = ["UP007", "UP045"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
# reapy and the MCP SDK have loose typing; don't fail on those entry points.
unresolved-import = "warn"
unresolved-attribute = "warn"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.15",
    "ty>=0.0.51",
]
